<resources>
    <string name="app_name">YouTubeDemo</string>
    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>
    <string name="profile_button_text">My profile</string>
    <string name="location_button_text">My location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_button_description">Capture Image</string>
    <string name="file_button_description">Pick image</string>
    <string name="user_name_title_text">Username</string>
    <string name="user_name_hint_text">user name</string>
    <string name="mobile_number_title_text">Mobile number</string>
    <string name="mobile_number_hint_text">your mobile number</string>
    <string name="save_profile_button_text">Save profile</string>
    <string name="login_prompt">Login using firebase</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="latitude_default_text">Latitude : Not available</string>
    <string name="longitude_default_text">Longitude : Not available</string>
    <string name="startlocation_button_text">Start location updates</string>
    <string name="stoplocation_button_text">Stop Location Updates</string>
    <string name="viewmap_button_text">View Location Map</string>
    <string name="ok">Ok</string>
    <string name="fine_location_permission_rationale">requires location permission just for demo</string>
    <string name="title_activity_maps_temp">Map</string>
    <string name="download_button_text">Download Images</string>
    <string name="camera_permission_rationale">app needs permission to capture user image</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
