<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TopFragment">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_button_text"
            android:background="@drawable/button_custom"
            style="@style/ButtonTheme"
            app:layout_constraintBottom_toTopOf="@+id/downloadButton"
            app:layout_constraintEnd_toEndOf="@+id/profileButton"
            />

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/download_button_text"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/ic_button_36dp"
            android:background="@drawable/button_custom"
            style="@style/ButtonTheme"
            app:layout_constraintBottom_toTopOf="@+id/profileButton"
            app:layout_constraintEnd_toEndOf="@+id/profileButton"
            app:layout_constraintStart_toStartOf="@+id/profileButton" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/profile_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:id="@+id/locationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/location_button_text"
            app:layout_constraintEnd_toEndOf="@+id/profileButton"
            app:layout_constraintStart_toStartOf="@+id/profileButton"
            app:layout_constraintTop_toBottomOf="@+id/profileButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>