<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="profileViewModel"
            type="com.kottapa.youtubedemo.profile.ProfileViewModel" />
    </data>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        tools:context=".profile.ProfileFragment"
        >


        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            android:background="@android:color/background_dark"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/verticalCenterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintCircle="@+id/userImageView"
            app:layout_constraintCircleRadius="150dp"
            app:layout_constraintCircleAngle="90"/>

        <ImageButton
            android:id="@+id/cameraImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/camera_button_description"
            app:layout_constraintStart_toEndOf="@+id/userImageView"
            app:layout_constraintBottom_toTopOf="@+id/verticalCenterTextView"
            app:srcCompat="@android:drawable/ic_menu_camera"
            />
        <ImageButton
            android:id="@+id/filepickerImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/file_button_description"
            app:layout_constraintTop_toBottomOf="@+id/cameraImageButton"
            app:layout_constraintLeft_toLeftOf="@+id/cameraImageButton"
            app:srcCompat="@android:drawable/ic_menu_report_image"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_person_outline_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="@+id/saveButton"
            android:hint="@string/user_name_hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phonenumberEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_phone_black_24dp"
            app:layout_constraintStart_toStartOf="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="@+id/saveButton"
            app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
            android:hint="@string/mobile_number_hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


                <!--
                <TextView
                    android:id="@+id/usernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_title_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/saveButton"

                    />

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:autofillHints="@string/user_name_hint_text"
                    android:layout_marginTop="3dp"
                    app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
                    app:layout_constraintStart_toStartOf="@+id/saveButton"
                    app:layout_constraintEnd_toEndOf="@+id/saveButton"
                    />

                <TextView
                    android:id="@+id/phonenumberTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number_title_text"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/usernameEditText"
                    app:layout_constraintStart_toStartOf="@+id/usernameEditText"
                    />

                <EditText
                    android:id="@+id/phonenumberEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:layout_marginTop="3dp"
                    android:autofillHints="@string/mobile_number_hint_text"
                    app:layout_constraintTop_toBottomOf="@+id/phonenumberTextView"
                    app:layout_constraintEnd_toEndOf="@+id/saveButton"
                    app:layout_constraintStart_toStartOf="@+id/saveButton"
                    />
        -->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/save_profile_button_text"
            app:layout_constraintTop_toBottomOf="@+id/phonenumberEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>